--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
   <head>
   <!-- Link your CSS stylesheet -->
     <link rel="stylesheet" href="index.css" />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono|Chelsea+Market'>
   </head>
   
   <body>
     <div class="content-area">
       <nav>
-        <a href="#plan">Plan your Visit</a>
-        <a href="#learn">Learn about the Park</a>
-        <a href="#">Get Involved</a>
+        <a class="plan-button" href="#plan">Plan your Visit</a>
+        <a class="learn-button" href="#learn">Learn about the Park</a>
+        <a class="involved-button" href="#">Get Involved</a>
       </nav>
       
       <section id="banner">
         <img src="assets/header_img.jpg" />
-        <h1>Yosemite Park Guide</h1>
-        <p>Come explore California’s beautiful wilderness.</p>
-        <p>Always open. Reservations are not available or required to enter the park.</p>
+        <div class="info">
+          <h1>Yosemite Park Guide</h1>
+          <p>Come explore California’s beautiful wilderness.</p>
+          <p class="always-open">Always open. Reservations are not available or required to enter the park.</p>
+        </div>
       </section>
 
       <section id="learn">
@@ -39,9 +42,9 @@
         <img src="assets/footer_img.jpg" />
         
         <nav>
-          <a href="#plan">Plan your Visit</a>
-          <a href="#learn">Learn about the Park</a>
-          <a href="#">Get Involved</a>
+          <a class="plan-button" href="#plan">Plan your Visit</a>
+          <a class="learn-button" href="#learn">Learn about the Park</a>
+          <a class="involved-button" href="#">Get Involved</a>
         </nav>
       </footer>
     </div>
